force-app/main/default/objects/Quote__c/fields/Quote_status__c.field-meta.xml
<CustomField>
    <fullName>Quote_status__c</fullName>
    <label>Quote Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drafted</fullName>
                <default>true</default>
                <label>Drafted</label>
            </value>
            <value>
                <fullName>submitted for approval</fullName>
            </value>
            <value>
                <fullName>Project Sales Head Approved</fullName>
            </value>
            <value>
                <fullName>Project Sales Head Rejected</fullName>
            </value>
            <value>
                <fullName>Sales Head Approved</fullName>
            </value>
            <value>
                <fullName>Sales Head Rejected</fullName>
            </value>
            <value>
                <fullName>Management User Approved</fullName>
            </value>
            <value>
                <fullName>Management User Rejected</fullName>
            </value>
            <value>
                <fullName>Sent to Customer</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>