force-app/main/default/objects/Quote__c/fields/Rate_per_sqft__c.field-meta.xml
<CustomField>
    <fullName>Rate_per_sqft__c</fullName>
    <label>Rate per Sq.ft on SBA</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>