force-app/main/default/objects/Quote__c/fields/Rate_sq_Ft_Discount__c.field-meta.xml
<CustomField>
    <fullName>Rate_sq_Ft_Discount__c</fullName>
    <formula>Rate_per_sqft__c - Discount_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate per Sq.ft On SBA  After Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>