force-app/main/default/objects/Quote__c/fields/Referred_by_lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_lead_ID__c</fullName>
    <label>Referred by lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>