force-app/main/default/objects/Quote__c/fields/Referred_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Referred_Contact_Number__c</fullName>
    <label>Referred Contact Number</label>
    <type>Phone</type>
</CustomField>