force-app/main/default/objects/Quote__c/fields/Sales_Head_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head_Formula__c</fullName>
    <formula>CASESAFEID(Projects__r.Sales_Head__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Head Formula</label>
    <type>Text</type>
</CustomField>