force-app/main/default/objects/Quote__c/fields/ShowSendEmailOption__c.field-meta.xml
<CustomField>
    <fullName>ShowSendEmailOption__c</fullName>
    <formula>(
TEXT(Quote_status__c) == &apos;Management User Approved&apos;
||
TEXT(Quote_status__c) == &apos;Sent to Customer&apos;
)
&amp;&amp;
TEXT(Quote_status__c) != &apos;Converted&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowSendEmailOption</label>
    <type>Checkbox</type>
</CustomField>