force-app/main/default/objects/Quote__c/fields/Sold_Details__c.field-meta.xml
<CustomField>
    <fullName>Sold_Details__c</fullName>
    <label>Sold Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NR</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Unsold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>