force-app/main/default/objects/Quote__c/fields/STP_and_Generator_Charges__c.field-meta.xml
<CustomField>
    <fullName>STP_and_Generator_Charges__c</fullName>
    <formula>Generator_Charges__c * Super_Built_UpArea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STP and Generator Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>