force-app/main/default/objects/Quote__c/fields/Total_Car_Parking_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Car_Parking_Charges__c</fullName>
    <formula>Car_Parking__c + Extra_car_parking_charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Car Parking Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>