force-app/main/default/objects/Quote__c/fields/Total_Corpus_Fund__c.field-meta.xml
<CustomField>
    <fullName>Total_Corpus_Fund__c</fullName>
    <formula>Corpus_Fund__c * Super_Built_UpArea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Corpus Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>