force-app/main/default/objects/Quote__c/fields/Total_Maintenance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Maintenance_Amount__c</fullName>
    <formula>if( RecordType.Name ==&apos;Plots&apos;,Super_Built_UpArea__c *  Maintenance_Charge__c * 12,Super_Built_UpArea__c *  Maintenance_Charge__c * 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Maintenance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>