force-app/main/default/objects/Quote__c/fields/Total_Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Charges__c</fullName>
    <formula>GST_On_Other_Charges_Actual__c+Sub_Total_Of_Other_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Other Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>