force-app/main/default/objects/Quote__c/fields/UDS_in_Sqyards__c.field-meta.xml
<CustomField>
    <fullName>UDS_in_Sqyards__c</fullName>
    <label>UDS in Sq.ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>