force-app/main/default/objects/Quote__c/fields/W_E_Charges__c.field-meta.xml
<CustomField>
    <fullName>W_E_Charges__c</fullName>
    <label>W&amp;E Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>