force-app/main/default/objects/Quote__c/fields/Water_Electricity_Charges__c.field-meta.xml
<CustomField>
    <fullName>Water_Electricity_Charges__c</fullName>
    <formula>(Water_Electricity_Rate__c * 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Water &amp; Electricity Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>