force-app/main/default/objects/Quote__c/fields/Water_Electricity_Rate__c.field-meta.xml
<CustomField>
    <fullName>Water_Electricity_Rate__c</fullName>
    <label>Water Electricity Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>