force-app/main/default/objects/Quote__c/fields/Wing__c.field-meta.xml
<CustomField>
    <fullName>Wing__c</fullName>
    <label>Wing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wing A</fullName>
            </value>
            <value>
                <fullName>Wing B</fullName>
            </value>
            <value>
                <fullName>Wing C</fullName>
            </value>
            <value>
                <fullName>Wing D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>