force-app/main/default/objects/Quote__c/fields/With_GST__c.field-meta.xml
<CustomField>
    <fullName>With_GST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not in Use</label>
    <type>Checkbox</type>
</CustomField>