force-app/main/default/objects/Quote__c/recordTypes/Apartments.recordType-meta.xml
<RecordType>
    <fullName>Apartments</fullName>
    <active>true</active>
    <label>Apartments</label>
</RecordType>