force-app/main/default/objects/Quote__c/validationRules/Discount_Should_not_we_greater_Than_685.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Should_not_we_greater_Than_685</fullName>
    <active>false</active>
    <errorConditionFormula>Discount_Price__c &gt;685</errorConditionFormula>
    <errorMessage>Discount Price Should not be greater than 685</errorMessage>
</ValidationRule>