force-app/main/default/objects/Quote__c/validationRules/one_Quotion_only_one_booking.validationRule-meta.xml
<ValidationRule>
    <fullName>one_Quotion_only_one_booking</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED(Quote_status__c),
    ISPICKVAL(PRIORVALUE(Quote_status__c), &quot;Converted&quot;),
    NOT(ISPICKVAL(Quote_status__c, &quot;Converted&quot;))
)</errorConditionFormula>
    <errorMessage>Once the status is set to &apos;Converted&apos;, it cannot be changed to another status.</errorMessage>
</ValidationRule>