force-app/main/default/objects/Quote__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Block_Lookup__c</columns>
    <columns>Unit__c</columns>
    <columns>Quote_status__c</columns>
    <columns>Property_Type__c</columns>
    <columns>Project__c</columns>
    <columns>Grand_Total_Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Quotes</label>
</ListView>