force-app/main/default/objects/Quote__c/listViews/Submitted_for_Approval_Quotes.listView-meta.xml
<ListView>
    <fullName>Submitted_for_Approval_Quotes</fullName>
    <columns>NAME</columns>
    <columns>Block_Lookup__c</columns>
    <columns>Unit__c</columns>
    <columns>Quote_status__c</columns>
    <columns>Property_Type__c</columns>
    <columns>Project__c</columns>
    <columns>Grand_Total_Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quote_status__c</field>
        <operation>equals</operation>
        <value>submitted for approval</value>
    </filters>
    <label>Submitted for Approval Quotes</label>
</ListView>